--- a/src/blocks/modules/menu/menu.scss
+++ b/src/blocks/modules/menu/menu.scss
@@ -64,7 +64,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		padding: 24px 0 24px 48px;
+		padding: 24px 0 24px 56px;
 		width: 100%;
 		height: 100%;
 		font-family: var(--font-family--bold);
